[tool.poetry]
name = "jiwer"
version = "3.0.4"
description = "Evaluate your speech-to-text system with similarity measures such as word error rate (WER)"
authors = ["Nik Vaessen <nikvaes@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/jitsi/jiwer"
include = ["LICENCE"]

[tool.poetry.dependencies]
python = "^3.7"
rapidfuzz = "^3"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "7.1.3"
pytest-benchmark = "^3.4.1"
flake8 = "5.0.4"

[tool.poetry.scripts]
jiwer = "jiwer.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
